2007-07-05  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/admin/system/manage_don_ping.rhtml: 

	* donrails/app/controllers/admin/system_controller.rb (Admin::manage_don_ping): Add function to sort.

2007-07-04  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* 1.6.9.4.
	** Plase update DB entry.
	* donrails/app/views/admin/system/manage_don_ping.rhtml: Add to show counter number.
	* donrails/tool/pingger/pingger.rb (Pingger::async_send): add new option (--defer_seconds=600). It controls ping re-send time.
	* upgrade_1_7.postgresql.sql: likewise.
	* upgrade_1_7.mysql.sql: likewise.
	* donrails/tool/tables-postgresql.sql: likewise.
	* donrails/tool/tables-mysql.sql: Add don_pings.counter.

2007-06-29  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* README: Change URL.

2007-06-27  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Version 1.6.9.3
	* New testing futre. (make mysqltestnew)

	* donrails/app/views/help/first_setup.rhtml: New file.

	* donrails/app/controllers/notes_controller.rb (NotesController::noteslist): Small fix for initial user.
	* donrails/example/database-mysqltest.yml: Change: database user is login user. (former user is 'test'.)
	* donrails/app/controllers/admin/login_controller.rb (Admin::authenticate): Fix for initial user. (mainly use for 'make mysqltestnew'.
	* donrails/app/controllers/application.rb (ApplicationController::authorize): Small fix to keep flash.
	
2007-06-21  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Version 1.6.9.2
	* Makefile (fulldist): New rule to package for donrails-full-VERSION.tar.gz which includes rails and extensions (experimental).
	* Makefile (dist): Small change.

2007-06-17  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/models/don_ping.rb (DonPing::send_ping_rest): Cleanup.

	* donrails/app/controllers/admin/article_controller.rb (Admin::fix_article): Fix to stop ping for non-published article. (issue #49)

2007-06-16  ARAKI Yasuhiro  <yasu@debian.or.jp>
