@@ -100,7 +100,7 @@ class NotesController < ApplicationController
 
   def articles_long
     @articles_pages, @articles = paginate(:article, :per_page => 10,
-                                          :order_by => 'size DESC, id DESC',
+                                          :order => 'size DESC, id DESC',
 					  :conditions => ["hidden IS NULL OR hidden = 0"]
                                           )
     @heading = "記事サイズ順の表示"
@@ -114,7 +114,7 @@ class NotesController < ApplicationController
   def articles_author
     begin
       @articles_pages, @articles = paginate(:article, :per_page => 10,
-                                            :order_by => 'id DESC',
+                                            :order => 'id DESC',
                                             :conditions => ["author_id = ? AND ( hidden IS NULL OR hidden = 0 )", params['id']]
                                             )
       @author = Author.find(params['id'])
@@ -151,7 +151,7 @@ class NotesController < ApplicationController
     minTime = nil
     @articles_pages, 
     @articles = paginate(:article, :per_page => 30,
-                         :order_by => 'article_date DESC, id DESC',
+                         :order => 'article_date DESC, id DESC',
 			 :conditions => ["hidden IS NULL OR hidden = 0"]
                          )
 
@@ -423,7 +423,7 @@ class NotesController < ApplicationController
       if @category and @category.id
         @articles_pages, @articles = 
           paginate(:article, 
-                   :order_by => 'articles.article_date DESC',
+                   :order => 'articles.article_date DESC',
                    :per_page => 30, 
                    :join => "JOIN categories_articles on (categories_articles.article_id=articles.id and categories_articles.category_id=#{@category.id})",
                    :conditions => ["articles.hidden IS NULL OR articles.hidden = 0"]
